# Processador-Osiris

./: .gitignore  CMakeLists.txt  README.md  compile.sh  exemple.txt  input.txt  osiris  output.vcd
include/: codigo.h  controller.h  data.h  data_memory.h  ula.h
src/: codigo.cpp  main.cpp
